# competicion_ros

competicion_gazebo_sim/: CMakeLists.txt  package.xml
competicion_gazebo_sim/launch/: competicion_hospital_world.launch
